// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomButton renders 1`] = `
<div
  className="sc-AykKC cDtWnO"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Score of Game
    </span>
  </button>
</div>
`;

exports[`Greeting renders 1`] = `
<div
  className="sc-AykKD lfrAza"
>
  <h1>
     Move the bug to eat all food! 
  </h1>
</div>
`;

exports[`ScoreCard renders 1`] = `
<div
  className="sc-AykKD lfrAza"
>
  <h1>
     Score: 
    10
     
  </h1>
</div>
`;
